Fixed tray-related bugs, Included fonts

--- a/app/less/index.less
+++ b/app/less/index.less
@@ -1,3 +1,6 @@
+@import "~typeface-nanum-square";
+@import "~typeface-exo-2";
+@import "~typeface-notosans-kor";
 @import "./swal.less";
 
 body, html {
