--- a/app/less/swal.less
+++ b/app/less/swal.less
@@ -5,7 +5,7 @@
 
 		.swal2 {
 			&-title {
-				font-family: 'NanumSquare', sans-serif;
+				font-family: 'Nanum Square', sans-serif;
 				color: #202020;
 				font-weight: 100;
 				font-size: 2rem;
@@ -16,7 +16,7 @@
 			}
 
 			&-content {
-				font-family: 'Noto Sans CJK KR', sans-serif;
+				font-family: 'Noto Sans KR', sans-serif;
 				color: #202020;
 				font-weight: 400;
 				padding-left: 50px;
@@ -82,7 +82,7 @@
 				padding: 10px 30px;
 				cursor: pointer;
 				color: #f1f1f1;
-				font-family: 'Noto Sans CJK KR', sans-serif;
+				font-family: 'Noto Sans KR', sans-serif;
 				box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3);
 				margin: 0 5px;
 				outline: none;
